@@ -33,8 +33,8 @@ then
 fi
 
 # Extract the value of EDITOR
-[ -z "$EDITOR" ] && EDITOR="`. /etc/rc.conf; echo $EDITOR`" 2>/dev/null
-[ -z "$EDITOR" ] && EDITOR="`. /etc/conf.d/basic; echo $EDITOR`" 2>/dev/null
+[ -z "$EDITOR" ] && EDITOR="`. /etc/rc.conf 2>/dev/null; echo $EDITOR`"
+[ -z "$EDITOR" ] && EDITOR="`. /etc/conf.d/basic 2>/dev/null; echo $EDITOR`"
 [ -z "$EDITOR" ] && EDITOR="/bin/nano"
 export EDITOR
 
